# databricks-mlops-lead-scoring

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: __init__.py  api.py  data_generator.py  features.py  hyperparameter_search.py  model_registry.py  monitoring.py  simulate_drift.py  train_with_mlflow.py
tests/: __init__.py  test_features.py  test_monitoring.py
