[project]
name = "lead-scoring-mlops"
version = "0.1.0"
description = "Lead Scoring MLOps Project - End-to-end ML pipeline with monitoring"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Core ML
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    # MLflow for experiment tracking
    "mlflow>=2.9.0",
    # API
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "joblib>=1.3.0",
    # Visualization
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    # Statistical tests
    "scipy>=1.11.0",
    "ipykernel>=7.1.0",
    "databricks-cli>=0.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
monitoring = [
    "evidently>=0.4.0",
    "great-expectations>=0.18.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
